fix: 修改group关联privilege查询privileges的接口问题